# mai_arch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  components.md  context.md  docker-compose.yml  example.sh  helper.h  start.sh  task.md
auth_service/: http_auth_server.h  http_request_factory.h  main.cpp
auth_service/handlers/: user_handler.h
cache_test/: performance.txt  test_cache.sh
config/: config.cpp  config.h
consumer_service/: main.cpp
database/: cache.cpp  cache.h  cart.cpp  cart.h  database.cpp  database.h  product.cpp  product.h  route.cpp  route.h  trip.cpp  trip.h  user.cpp  user.h
docs/apis/: auth.yaml  carts.yaml  products.yaml  route.yaml  trip.yaml
mariadb/init/: Dockerfile  basemod.py  init.py  init.sql  requirements.txt  route.py  user.py
route_service/: http_request_factory.h  http_route_server.h  main.cpp
route_service/handlers/: route_handler.h
trip_service/: http_request_factory.h  http_trip_server.h  main.cpp
trip_service/handlers/: trip_handler.h
